--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1,3 +1,85 @@
+@font-face {
+  font-family: Poppins;
+  src: url(/css/fonts/Poppins-Regular.woff2) format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/css/fonts/Poppins-SemiBold.woff2) format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/css/fonts/Poppins-Bold.woff2) format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap
+}
+@font-face {
+  font-family: Poppins;
+  src: url(/css/fonts/Poppins-ExtraBold.woff2) format("woff2");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap
+}
+@font-face {
+  font-family: Manrope;
+  src: url(/css/fonts/Manrope-Regular.woff2) format("woff2");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap
+}
+@font-face {
+  font-family: Manrope;
+  src: url(/css/fonts/Manrope-Medium.woff2) format("woff2");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap
+}
+@font-face {
+  font-family: Manrope;
+  src: url(/css/fonts/Manrope-SemiBold.woff2) format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap
+}
+@font-face {
+  font-family: "Open Sans";
+  src: url(/css/fonts/OpenSans-SemiBold.woff2) format("woff2");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap
+}
+@font-face {
+  font-family: "Times New Roman";
+  src: url(/css/fonts/TimesNewRoman-Bold.woff2) format("woff2");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap
+}
+body {
+  font-family: Poppins
+}
+h1 {
+  font-family: Manrope;
+  font-weight: 400
+}
+h2 {
+  font-family: "Open Sans";
+  font-weight: 600
+}
+h3 {
+  font-family: Poppins;
+  font-weight: 400
+}
+h4 {
+  font-family: "Times New Roman";
+  font-weight: 700
+}
 body {
   display: block
 }
