--- a/app/scss/base/_var.scss
+++ b/app/scss/base/_var.scss
@@ -1,1 +1,11 @@
+// *************** Colors ************
+$Premium-Pink: #E43071;
+$Grey-Copy: #424242;
+$Pink-Subtle: #FFDAE7;
+$Pink-Hover: #BE285E;
+$Dark-DIsabled: #D37899;
+$Light-Grey: #F2F3F8;
+$txt-btn: #F7F7FC;
+
+//************** Paths
 $path-fonts: '/css/fonts' ; 
